[gd_scene load_steps=21 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/crosshair007.png" type="Texture" id=2]
[ext_resource path="res://Player/SFX/Walking/RandomWalk.gd" type="Script" id=3]
[ext_resource path="res://Player/SFX/Walking/footstep05.ogg" type="AudioStream" id=4]
[ext_resource path="res://Player/SFX/Walking/footstep06.ogg" type="AudioStream" id=5]
[ext_resource path="res://Player/SFX/Walking/footstep04.ogg" type="AudioStream" id=6]
[ext_resource path="res://Player/SFX/Walking/footstep00.ogg" type="AudioStream" id=7]
[ext_resource path="res://Player/SFX/Walking/footstep07.ogg" type="AudioStream" id=8]
[ext_resource path="res://default_env.tres" type="Environment" id=9]
[ext_resource path="res://Player/SFX/Climbing/ladder3.ogg" type="AudioStream" id=10]
[ext_resource path="res://Player/SFX/Climbing/ladder5.ogg" type="AudioStream" id=11]
[ext_resource path="res://Player/SFX/Climbing/ladder4.ogg" type="AudioStream" id=12]
[ext_resource path="res://Player/SFX/Climbing/ladder1.ogg" type="AudioStream" id=14]

[sub_resource type="CapsuleShape" id=3]
height = 2.0

[sub_resource type="Animation" id=11]
resource_name = "bobbing"
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( -2, -0.5, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.3, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "land"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, -0.803629, -0.1, -0.00292552, 0.128, 0.006, 0, -0.13, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Camera:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, -1.37748, -0.077, 0, 0.149, 0, 0, -0.136, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3 )
}

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 0.392157 )
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color( 0, 0, 0, 0.113725 )
shadow_size = 24

[sub_resource type="Theme" id=18]
ProgressBar/styles/bg = SubResource( 17 )
ProgressBar/styles/fg = SubResource( 19 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 1, 1.5, 0.1 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 0.9375, 0, 0, 0, 0.9375, -1.16415e-10, 0, 1.16415e-10, 0.9375, 0, 1.00625, 2.32831e-10 )

[node name="Camera" type="Camera" parent="Head"]
environment = ExtResource( 9 )
far = 1000.0

[node name="bob" type="AnimationPlayer" parent="Head/Camera"]
playback_speed = 2.0
anims/bobbing = SubResource( 11 )

[node name="land" type="AnimationPlayer" parent="Head/Camera"]
root_node = NodePath("../..")
anims/land = SubResource( 16 )

[node name="Hand" type="SpringArm" parent="Head"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
spring_length = 5.0
margin = 0.0

[node name="GrabPos" type="Spatial" parent="Head/Hand"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, 0 )

[node name="RayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -6.095 )
collision_mask = 5
collide_with_areas = true

[node name="ItemPosition" type="Position3D" parent="Head"]
transform = Transform( 0.0609402, 0.269603, -0.961041, -0.0605334, 0.962057, 0.26605, 0.996304, 0.041962, 0.0749479, 1.17334, -1.07002, -1.91814 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 0.9375, 0, 0, 0, 0.9375, 0, 0, 0, 0.9375, 0, -1.10625, 0 )
enabled = true
cast_to = Vector3( 0, -1.021, 0 )
collide_with_areas = true
debug_shape_thickness = 5.0

[node name="TopCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 2.021, 0 )
debug_shape_thickness = 5.0

[node name="Crosshair" type="Node2D" parent="."]
visible = false

[node name="Crosshair007" type="Sprite" parent="Crosshair"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprint" type="ProgressBar" parent="."]
visible = false
margin_left = 1250.0
margin_top = 685.0
margin_right = 1704.0
margin_bottom = 738.0
rect_rotation = -180.0
theme = SubResource( 18 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClimbCheck" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ClimbCheck"]
transform = Transform( 1, 0, 0, 0, 1, -6.98492e-10, 0, 6.98492e-10, 1, 0, 0.298254, -1.00052 )
shape = SubResource( 15 )

[node name="RandomWalk" type="AudioStreamPlayer" parent="."]
script = ExtResource( 3 )
AudioFiles = [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ) ]

[node name="WalkAudioTimer" type="Timer" parent="RandomWalk"]
wait_time = 0.5
one_shot = true

[node name="RandomClimb" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 3 )
AudioFiles = [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ]

[node name="ClimbAudioTimer" type="Timer" parent="RandomClimb"]
wait_time = 0.5
one_shot = true

[node name="LandAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ClimbTimeout" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="ClimbCheck" to="." method="_on_ClimbCheck_area_entered"]
[connection signal="area_exited" from="ClimbCheck" to="." method="_on_ClimbCheck_area_exited"]
[connection signal="timeout" from="RandomWalk/WalkAudioTimer" to="." method="_on_WalkAudioTimer_timeout"]
[connection signal="timeout" from="RandomClimb/ClimbAudioTimer" to="." method="_on_ClimbAudioTimer_timeout"]
[connection signal="timeout" from="ClimbTimeout" to="." method="_on_ClimbTimeout_timeout"]
